--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,7 @@
       <li><a routerLink="cuarto">Cuarto componente</a> </li>
       <li><a routerLink="quinto">Quinto componente</a> </li>
       <li><a routerLink="usuario-api">Usuario api componente</a> </li>
+      <li><a routerLink="curso-api">Curso api componente</a> </li>
     </ul>
   </mat-sidenav>
   <mat-sidenav-content>
